# RLLaVA

./: .gitignore  LICENSE  README.md  install.sh  legacy_model_merger.py  pyproject.toml  readthedocs.yaml
examples/: README.md  config.yaml  config_grounding.yaml  config_gui.yaml  config_lora.yaml  eval.md  train.md
examples/algorithms/: qwen2_5_vl_3b_geoqa3k_clip_cov.sh  qwen2_5_vl_3b_geoqa3k_dapo.sh  qwen2_5_vl_3b_geoqa3k_drgrpo.sh  qwen2_5_vl_3b_geoqa3k_gmpo.sh  qwen2_5_vl_3b_geoqa3k_gpg.sh  qwen2_5_vl_3b_geoqa3k_grpo.sh  qwen2_5_vl_3b_geoqa3k_gspo.sh  qwen2_5_vl_3b_geoqa3k_kl_cov.sh  qwen2_5_vl_3b_geoqa3k_opo.sh  qwen2_5_vl_3b_geoqa3k_reinforce_plus_plus.sh  qwen2_5_vl_3b_geoqa3k_reinforce_plus_plus_baseline.sh  qwen2_5_vl_3b_geoqa3k_remax.sh  qwen2_5_vl_3b_geoqa3k_rloo.sh
examples/format_prompt/: agent_code.jinja  agent_search.jinja  grounding.jinja  gui_agent.jinja  ovd.jinja  r1v.jinja  rec.jinja  wemath.jinja
examples/reward_function/: agent_code.py  agent_search.py  grounding.py  ovd.py  r1v.py  wemath.py
examples/tinyllava/: convert_vqav2_for_submission.py
rllava/data/: __init__.py  config.py  data_loader.py  data_utils.py  dataset.py  dataset.py.bak  image_preprocess.py  protocol.py  trajectory_storage.py
rllava/engine/: __init__.py
rllava/eval/: eval_textvqa.py  evaluate_grounding.py  model_vqa.py  model_vqa_loader.py  model_vqa_mmmu.py  model_vqa_pope.py  model_vqa_science.py  run_tiny_llava.py  test_qwen2vl_counting_superclevr.py
rllava/model/: builder.py  modeling_tinyllava.py
rllava/ppo/: __init__.py  config.py  config.py.bak  ppo.py
(+181 files in other folders)
