[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rllava"
version = "1.0.0"
description = "a modular framework for multi-modal reinforcement learning with algorithm-driven design."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.optional-dependencies]
train = []

[project.urls]
"Homepage" = "https://github.com/TinyLoopX/RLLaVA"
"Bug Tracker" = "https://github.com/TinyLoopX/RLLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

